trunk/Archive2/d1/14696fce6113db/output
main.cpp:1:17: error: variable or field 'fillValues' declared void
 void fillValues(xmlNodePtr nodePtr, Puzzle::iterator it) {
                 ^
main.cpp:1:17: error: 'xmlNodePtr' was not declared in this scope
main.cpp:1:37: error: 'Puzzle' has not been declared
 void fillValues(xmlNodePtr nodePtr, Puzzle::iterator it) {
                                     ^
